fixed github being covered up

--- a/src/pages/components/contributions/styles/_contributions.scss
+++ b/src/pages/components/contributions/styles/_contributions.scss
@@ -76,7 +76,10 @@
       padding: 10px;
       .action {
         cursor: pointer;
-        position: absolute;
+        // position: absolute;
+        float: right;
+        padding-left: 20px;
+        box-sizing: content-box;
         top: -10px;
         right: 20px;
         &::before {
